syntax = "proto3";

option java_multiple_files = true;
option java_package = "ai.wanaku.core.exchange.v1";
option java_outer_classname = "ToolExchange";

package ai.wanaku.tool.v1;

// The tool exchange service definition.
service ToolInvoker {
  // Invokes a tool
  rpc InvokeTool (ToolInvokeRequest) returns (ToolInvokeReply) {}
}

// The invocation request message
message ToolInvokeRequest {
  string uri = 1;
  string body = 2;
  map<string, string> arguments = 3;
  string configuration_uri = 4;
  string secrets_uri = 5;
  map<string, string> headers = 6;
}

// The invocation response message
message ToolInvokeReply {
  reserved 1;
  reserved "isError";
  repeated string content = 2;
}
